--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
+    "electron": "^33.0.2",
+    "element-plus": "^2.8.6",
+    "lodash": "^4.17.21",
+    "node-polyfill-webpack-plugin": "2.0.1",
+    "uuid": "^10.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
