--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.8.6",
     "lodash": "^4.17.21",
+    "pinia": "^2.2.5",
+    "typescript": "^5.6.3",
     "uuid": "^10.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
+    "@types/node": "^22.8.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -33,8 +36,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "prettier": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
