--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@imengyu/vue3-context-menu": "^1.4.3",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.6",
